fix: player on iOS

--- a/src/components/ColourfulBackground.css
+++ b/src/components/ColourfulBackground.css
@@ -1,69 +1,53 @@
 body {
-  overflow: hidden;
+  position: relative;
 }
 
-.colourful-bg {
+.colourful-background {
+  display: none;
   position: absolute;
-  top: -50vh;
-  left: -50vw;
-  width: 200vw;
-  height: 200vh;
-  pointer-events: 0;
-  z-index: -1;
-  overflow: hidden;
-}
-
-.bg-one,
-.bg-two {
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
-  position: absolute;
-  border-radius: 50%;
-  animation: rotate 90s linear;
-  animation-iteration-count: infinite, 1;
-  animation-direction: alternate;
-  filter: blur(calc(100vh)) brightness(60%);
+  z-index: -1;
+  overflow: hidden;
+  pointer-events: none;
 }
 
-.bg-one {
-  right: 0;
-  top: 0;
-  z-index: 10;
-  mix-blend-mode: luminosity;
+.colourful-background.loaded {
+  display: block;
 }
 
-.bg-two {
-  left: 0;
-  bottom: 0;
-  z-inxed: 1;
-  animation-direction: reverse;
-  animation-delay: 10s, 5s;
+.colourful-background.loaded {
+  width: 100%;
+  height: 100%;
+  background-color: black;
+  animation: fadeIn 300ms ease-in;
+}
+
+.colourful-background.loaded img {
+  width: 100%;
+  height: 100%;
+
+  filter: blur(4rem);
+  mix-blend-mode: difference;
+  opacity: 75%;
+}
+
+.image-1 {
+}
+
+.image-2 {
+  transform: scaleX(-1) scaleY(-1);
 }
 
 @keyframes rotate {
   0% {
-    transform: rotate(0deg) scale(100%);
-  }
-  50% {
-    transform: rotate(180deg) scale(150%);
+    transform: rotate(0deg);
   }
   100% {
-    transform: rotate(360deg) scale(100%);
+    transform: rotate(360deg);
   }
-}
-
-.bg-fallback {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  z-index: -2;
-  background: linear-gradient(
-      217deg,
-      rgba(255, 0, 0, 0.8),
-      rgba(255, 0, 0, 0) 70.71%
-    ),
-    linear-gradient(127deg, rgba(0, 255, 0, 0.8), rgba(0, 255, 0, 0) 70.71%),
-    linear-gradient(336deg, rgba(0, 0, 255, 0.8), rgba(0, 0, 255, 0) 70.71%);
 }
 
 @keyframes fadeIn {
